--- a/HexCode/HexCode.csproj
+++ b/HexCode/HexCode.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Circles.cs" />
+    <Compile Include="Edge.cs" />
     <Compile Include="Hexagon.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
